# LibTorchTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
